Added caching to /chat, Responses are now way faster
